// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToastWrapper> should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #5E6D7A;
  border-radius: 3px;
  box-shadow: none;
  border: 1px solid undefined;
  color: #FFF;
  font-stretch: normal;
  font-style: normal;
  text-align: left;
  padding: 12px 16px;
  width: 368px;
  max-width: 100%;
}

<div
  className="c0"
  size="small"
  type="success"
/>
`;

exports[`<ToastWrapper> should render correctly with Novo 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #141414;
  border-radius: 6px;
  box-shadow: none;
  border: 1px solid undefined;
  color: #FFFFFF;
  font-stretch: normal;
  font-style: normal;
  text-align: left;
  padding: 8px 16px 8px 0;
  width: 320px;
  max-width: 100%;
}

<div
  className="c0"
  size="small"
  type="success"
/>
`;
